tests/neg/i10074.scala
class Context
given Context = ???  // ok
given: Context = ???     // error
